--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Antonio Martinez</title>
+    <title>Antonio Martinez - Web Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="author" content="Antonio Martinez" />
     <link rel="shortcut icon" href="https://cr.linkemer.com/antonio/images/antonio.png?v2">
@@ -162,13 +162,13 @@
                                     <ul class="info-list">
                                         <li><span class="title">Age</span><span class="value">24</span></li>
                                         <li><span class="title">Residence</span><span class="value">San José, Costa Rica</span></li>
-                                        <li><span class="title">Email</span><span class="value"> <a href="/cdn-cgi/l/email-protection#6706091308090e0814490a0615130e09021d4903021127000a060e0b4904080a"><span class="__cf_email__" data-cfemail="c2a3acb6adacabadb1ecafa3b0b6abaca7b8eca6a7b482a5afa3abaeeca1adaf">[email&#160;protected]</span></a> </span></li>
+                                        <li><span class="title">Email</span><span class="value"> <a href="mailto:antonios.martinez.dev@gmail.com">antonios.martinez.dev@gmail.com</a> </span></li>
                                         <li><span class="title">Phone</span><span class="value">+506 6417 3469</span></li>
                                         <li><span class="title">Availability</span><span class="value available">Immediately</span></li>
                                         <li><span class="title">Languages</span><span class="value available">Spanish/English</span></li>
                                         <!--<li><span class="title">Desired Salary </span><span class="value available">2500 US$/mo</span></li>-->
                                     </ul>
-                                </div>
+                                </div> 
 
                             </div>
                         </div>
