--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                                         <a href="https://www.facebook.com/antoniomartzz" target="_blank"><i class="fa fa-facebook"></i></a>
                                         <a href="https://www.instagram.com/antoniomartz/" target="_blank"><i class="fa fa-instagram"></i></a>
                                         <a href="https://github.com/MartinezAntonio" target="_blank"><i class="fa fa-github"></i></a>
+                                        <a href="https://www.linkedin.com/in/antonio-martinez-212572127/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                     </div>
 
                                 </div>
@@ -143,10 +144,11 @@
                                 <div class="col-sm-6 col-md-6 col-lg-6">
                                     <div class="about-me">
                                         <div class="block-title">
-                                            <h3>Hello!<span></span></h3>
+                                            <h3>Hi!<span></span></h3>
                                         </div>
 
-                                        <p>I’m Antonio. Web developer in love with technology and software, starting to develop for the web since my 17 years old.
+                                        <p>
+                                            I’m Antonio. Full Stack Web Developer, coding since my 17 years old using javaScript, Php, Mysql, CSS and other front-end frameworks.
                                             I love to develop projects from the beginning and see how they come to life with each line of code. <a href="/#resume">Read more..</a> <br><br>
                                             
                                            <b>Please use the menu options ups there.</b>
@@ -164,7 +166,7 @@
                                         <li><span class="title">Residence</span><span class="value">San José, Costa Rica</span></li>
                                         <li><span class="title">Email</span><span class="value"> <a href="mailto:antonios.martinez.dev@gmail.com">antonios.martinez.dev@gmail.com</a> </span></li>
                                         <li><span class="title">Phone</span><span class="value">+506 6417 3469</span></li>
-                                        <li><span class="title">Availability</span><span class="value available">Immediately</span></li>
+                                        <li><span class="title">Availability</span><span class="value available">Available</span></li>
                                         <li><span class="title">Languages</span><span class="value available">Spanish/English</span></li>
                                         <!--<li><span class="title">Desired Salary </span><span class="value available">2500 US$/mo</span></li>-->
                                     </ul>
@@ -219,11 +221,11 @@
 <li>Creation of customized complex and unique algorithms and formulas to solve unique needs.</li>
 <li>Development of complex systems using routes, MVC architecture and object-oriented programming. (OOP)</li>
 <li>Database design and standardization (MySQL).</li>
-<li>Queries and functions in Mysql.</li>
-<li>Braintree, PayPal and Stripe APIs (Payment gateways).</li>
-<li>Login SDK API of Facebook (PHP).</li>
-<li>Some oldest SOAP (nusoap PHP Lib) API and also API Rest.</li>
-<li>Slack API and others with Angular in TypeScript.</li>
+<li>Queries, Stored Procedures and functions in Mysql.</li>
+<li>Implementation of Braintree, Greenpay, PayPal and Stripe APIs (Payment gateways).</li>
+<li>Login with SDK API of Facebook and Google (PHP).</li>
+<li>Consuming and developing PHP API Rest from scratch and SOAP (nusoap PHP Lib).</li>
+<li>Creation of front-end interfaces in Angular 8 with typeScript.</li>
 <li>Complex management systems with Async PHP and dynamic Data responses using AJAX and JSON for Callbacks.</li>
 <li>Custom PHP Plugins, Widgets and Themes for Wordpress.</li>
 <li>System maintenance and debugging. (PHP, JavaScript, MySQL).</li>
@@ -341,7 +343,7 @@
                                                 <div class="skill-percentage skill-1"></div>
                                             </div>
 
-   <h4>Angular</h4>
+   <h4>Angular/TypeScript</h4>
                                             <div class="skill-container">
                                                 <div class="skill-percentage skill-2"></div>
                                             </div>
@@ -431,7 +433,7 @@
 
 
                                         <div class="download-resume">
-                                            <a href="https://antonio.linkemer.com/antonio/cv.pdf" target="_blank" download class="btn btn-secondary">Download Resume</a>
+                                            <a href="/cv.pdf" target="_blank" download class="btn btn-secondary">Download PDF Resume</a>
                                         </div>
 
 
@@ -520,7 +522,7 @@
                                     <!-- Portfolio Item 3 -->
                                  <figure class="item" data-groups='["all", "media"]'>
                                         <a class="ajax-page-load">
-                                            <img src="images/portfolio/tapirus.png" alt="">
+                                            <img src="images/portfolio/tapirus.png" alt="tapirus">
                                             <div>
                                                 <h5 class="name">tapiruslodge.com</h5>
                                                 <small>A website build in Wordpress with custom plugins in php</small>
