--- a/index.html
+++ b/index.html
@@ -582,14 +582,13 @@
                                     <!-- /Portfolio Item 9 -->
 
 
-
                                     <!-- Portfolio Item 9 -->
                                     <figure class="item" data-groups='["all", "media"]'>
                                         <a class="ajax-page-load">
                                             <img src="images/portfolio/linkemer.png" alt="">
                                             <div>
                                                 <h5 class="name">linkemer.com</h5>
-                                                <small>Classified ads</small>
+                                                <small>Classified ads web with Osclass an open source system.</small>
                                                 <i class="fa fa-file-text-o"></i>
                                             </div>
                                         </a>
@@ -617,103 +616,6 @@
                 </section>
                 <!-- /Portfolio Subpage -->
 
-
-                <!-- Contact Subpage -->
-                <section class="pt-page" data-id="contact">
-                    <div class="section-inner custom-page-content">
-                        <div class="page-header color-1">
-                            <h2>Contact</h2>
-                        </div>
-                        <div class="page-content">
-
-                            <div class="row">
-                                <div class="col-sm-6 col-md-6">
-                                    <div class="block-title">
-                                        <h3>Get in <span>Touch</span></h3>
-                                    </div>
-                                    <!-- Google Map -->
-                                    <div id="map" class="map"></div>
-                                    <!-- End of Google Map -->
-
-                                    <div class="contact-info-block">
-                                        <div class="ci-icon">
-                                            <i class="fa fa-map-marker"></i>
-                                        </div>
-                                        <div class="ci-text">
-                                            <h5>Los Angeles, USA</h5>
-                                        </div>
-                                    </div>
-                                    <div class="contact-info-block">
-                                        <div class="ci-icon">
-                                            <i class="fa fa-envelope"></i>
-                                        </div>
-                                        <div class="ci-text">
-                                            <h5><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="ed8c8188959e80849985ad88958c809d8188c38e8280">[email&#160;protected]</a></h5>
-                                        </div>
-                                    </div>
-                                    <div class="contact-info-block">
-                                        <div class="ci-icon">
-                                            <i class="fa fa-phone"></i>
-                                        </div>
-                                        <div class="ci-text">
-                                            <h5>+123 654 78900</h5>
-                                        </div>
-                                    </div>
-                                    <div class="contact-info-block">
-                                        <div class="ci-icon">
-                                            <i class="fa fa-check"></i>
-                                        </div>
-                                        <div class="ci-text">
-                                            <h5>Freelance Available</h5>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-6 col-md-6">
-                                    <div class="block-title">
-                                        <h3>Contact <span>Form</span></h3>
-                                    </div>
-                                    <form id="contact-form" method="post" action="contact_form/contact_form.php">
-
-                                        <div class="messages"></div>
-
-                                        <div class="controls">
-                                            <div class="form-group form-group-with-icon">
-                                                <i class="fa fa-user"></i>
-                                                <label>Full Name</label>
-                                                <input id="form_name" type="text" name="name" class="form-control" placeholder data-error="Name is required.">
-                                                <div class="form-control-border"></div>
-                                                <div class="help-block with-errors"></div>
-                                            </div>
-
-                                            <div class="form-group form-group-with-icon">
-                                                <i class="fa fa-envelope"></i>
-                                                <label>Email Address</label>
-                                                <input id="form_email" type="email" name="email" class="form-control" placeholder data-error="Valid email is required.">
-                                                <div class="form-control-border"></div>
-                                                <div class="help-block with-errors"></div>
-                                            </div>
-
-                                            <div class="form-group form-group-with-icon">
-                                                <i class="fa fa-comment"></i>
-                                                <label>Message for Me</label>
-                                                <textarea id="form_message" name="message" class="form-control" placeholder rows="4" required="required" data-error="Please, leave me a message."></textarea>
-                                                <div class="form-control-border"></div>
-                                                <div class="help-block with-errors"></div>
-                                            </div>
-
-                                            <div class="g-recaptcha" data-sitekey="6LdqmCAUAAAAAMMNEZvn6g4W5e0or2sZmAVpxVqI"></div>
-
-                                            <input type="submit" class="button btn-send" value="Send message">
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <!-- End Contact Subpage -->
-
             </div>
         </div>
         <!-- /Page changer wrapper -->
@@ -732,8 +634,6 @@
 <script type="text/javascript" src="js/owl.carousel.min.js"></script>
 <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
 <script type="text/javascript" src="js/jquery.hoverdir.js"></script>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCx-29Yh0LpLpZ6g3-RvGiSoVN2KAG4eKA"></script>
-<!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>-->
 <script type="text/javascript" src="js/jquery.googlemap.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 
