--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                                         <li>Complex management systems with Async PHP and dynamic Data responses using AJAX and JSON for Callbacks.</li>
                                         <li>Custom PHP Plugins, Widgets and Themes for Wordpress.</li>
                                         <li>System maintenance and debugging. (PHP, JavaScript, MySQL).</li>
-                                        <li>Dynamic Responsive websites and Web applications, using CSS3, SASS, JQuery, Angular, Bootstrap and ohers.</li>
+                                        <li>Dynamic Responsive websites and Web applications, using CSS, jQuery, Angular, Bootstrap and ohers.</li>
                                         <li>Websites and Web applications Optimization. (Improving the code, minifying, data compressing, etc).</li>
                                         <li>Scraping with JavaScript.</li>
                                         <li>Basic server management and ability to create a development environment for any lamp project.</li>
@@ -323,6 +323,11 @@
                                                 <div class="skill-percentage skill-2"></div>
                                             </div>
 
+                                            <h4>CSS</h4>
+                                            <div class="skill-container">
+                                                <div class="skill-percentage skill-3"></div>
+                                            </div>
+
                                             <h4>JQuery</h4>
                                             <div class="skill-container">
                                                 <div class="skill-percentage skill-2"></div>
@@ -331,16 +336,6 @@
                                             <h4>Bootstrap</h4>
                                             <div class="skill-container">
                                                 <div class="skill-percentage skill-2"></div>
-                                            </div>
-
-                                            <h4>CSS3/SASS</h4>
-                                            <div class="skill-container">
-                                                <div class="skill-percentage skill-3"></div>
-                                            </div>
-
-                                            <h4>HTML5</h4>
-                                            <div class="skill-container">
-                                                <div class="skill-percentage skill-3"></div>
                                             </div>
 
                                             <h4>Basic knowledge UI/UX</h4>
@@ -370,12 +365,12 @@
                                                 <div class="skill-percentage skill-5"></div>
                                             </div>
 
-                                            <h4>API/Webservices/Rest</h4>
+                                            <h4>APIs/Services</h4>
                                             <div class="skill-container">
                                                 <div class="skill-percentage skill-4"></div>
                                             </div>
 
-                                            <h4>BD/MySQL</h4>
+                                            <h4>MySQL</h4>
                                             <div class="skill-container">
                                                 <div class="skill-percentage skill-6"></div>
                                             </div>
@@ -385,17 +380,12 @@
                                                 <div class="skill-percentage skill-4"></div>
                                             </div>
 
-                                            <h4>Wordpress/Plugin Developer</h4>
+                                            <h4>Wordpress</h4>
                                             <div class="skill-container">
                                                 <div class="skill-percentage skill-4"></div>
                                             </div>
 
-                                            <h4>Basic Server admin/DevOp</h4>
-                                            <div class="skill-container">
-                                                <div class="skill-percentage skill-4"></div>
-                                            </div>
-
-                                            <h4>Debugging</h4>
+                                            <h4>DevOp/Server</h4>
                                             <div class="skill-container">
                                                 <div class="skill-percentage skill-4"></div>
                                             </div>
