--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                         <li>Dynamic Responsive websites and Web applications, using CSS, jQuery, Angular, Bootstrap and ohers.</li>
                                         <li>Websites and Web applications Optimization. (Improving the code, minifying, data compressing, etc).</li>
                                         <li>Scraping with JavaScript.</li>
-                                        <li>Basic server management and ability to create a development environment for any lamp project.</li>
+                                        <li>Server management and ability to create a development environment for any lamp project.</li>
                                         <li>Strong understanding of web master concepts (SSL, IIS, DNS and IP configuration).</li>
                                     </ul>
 
@@ -338,7 +338,7 @@
                                                 <div class="skill-percentage skill-2"></div>
                                             </div>
 
-                                            <h4>Basic knowledge UI/UX</h4>
+                                            <h4>Material Design</h4>
                                             <div class="skill-container">
                                                 <div class="skill-percentage skill-3"></div>
                                             </div>
