--- a/index.html
+++ b/index.html
@@ -150,8 +150,6 @@
                                         <p>
                                             I’m Antonio. Full Stack Web Developer, coding since my 17 years old using javaScript, Php, Mysql, CSS and other front-end frameworks.
                                             I love to develop projects from the beginning and see how they come to life with each line of code. <a href="/#resume">Read more..</a> <br><br>
-
-                                            <b>Please use the menu options ups there.</b>
                                         </p>
 
                                     </div>
@@ -194,21 +192,18 @@
                                         <h3>About <span>Me</span></h3>
                                     </div>
 
-                                    <p>Web developer in love with software and technology, starting to develop for the web since my 17 years old.
+                                    <p>Full Stack Web Developer, coding since my 17 years old using javaScript, Php, Mysql, CSS and other front-end frameworks.
                                         I love to develop projects from the beginning and see how they come to life with each line of code.<br>
                                     </p>
 
                                     <p>
-                                        I have extensive experience developing small and large web projects, both front-end and back-end. I develop in a structured and object-oriented (OOP), implementing the best architecture practices such as MVC.
+                                        I have experience developing small and large web projects, both front-end and back-end. I develop in a structured and object-oriented (OOP), implementing the best architecture practices such as MVC.
                                         <br><br>
                                         I have knowledge in database design, structuring and standardization, obtained from the experience in developing complex systems. My experience covers all phases of the project life cycle, from the structuring of the database to the development and the code documentation.
                                     </p>
 
 
-                                    <p>I love new challenges and learn new languages and technologies, for now I am developing a personal project in Node JS and Angular JS.<br></p>
-
                                     <p><b>I always say that, with Stackoverflow and Google you can develop anything!</b></p>
-
 
 
                                     <p><hr></p>
@@ -389,7 +384,7 @@
                                             <div class="skill-container">
                                                 <div class="skill-percentage skill-4"></div>
                                             </div>
-                                            
+
                                         </div>
 
 
