--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                         </div>
 
                                         <p>
-                                            I’m Antonio. Full Stack Web Developer, coding since my 17 years old using javaScript, Php, Mysql, CSS and other front-end frameworks.
+                                            I’m Antonio. Full Stack Web Developer, coding since my 17 years old using javaScript, Php, Mysql, CSS and other front-end frameworks.<br><br>
                                             I love to develop projects from the beginning and see how they come to life with each line of code. <a href="/#resume">Read more..</a> <br><br>
                                         </p>
 
