--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <!-- Main menu -->
                 <ul id="nav" class="site-main-menu">
                     <li>
-                        <a class="pt-trigger" href="#home">Hello</a><!-- href value = data-id without # of .pt-page. -->
+                        <a class="pt-trigger" href="#home">Home</a><!-- href value = data-id without # of .pt-page. -->
                     </li>
 
                     <li>
@@ -112,7 +112,7 @@
                                 </div>
 
                                 <div class="col-sm-8 col-md-8 col-lg-8">
-                                    <div class="title-block"> 
+                                    <div class="title-block">
                                         <h1>Antonio Martinez</h1>
                                         <div class="owl-carousel text-rotation">
 
@@ -389,13 +389,13 @@
 
 
                                         <div class="download-resume">
-                                            <a href="/cv.pdf" target="_blank" download class="btn btn-secondary">Download PDF Resume</a>
+                                            <a href="/antonio-martinez-resume.pdf" target="_blank" download class="btn btn-secondary">Download PDF Resume</a>
                                         </div>
 
 
                                     </div>
                                 </div>
-                            </div>
+                            </div>h
 
                         </div>
                     </div>
