--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                             <!-- Experience 1 -->
                                             <div class="timeline-item">
                                                 <h4 class="item-title">CIP Reporting</h4>
-                                                <span class="item-small">Reporting Software</span>
+                                                <span class="item-small">Reporting Software (Remote Washington)</span>
                                                 <p class="item-description">Web Developer</p>
                                             </div>
                                             <!-- / Experience 1 -->
