--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                                 <div class="col-sm-4 col-md-4 col-lg-4">
                                     <div class="photo">
-                                        <img src="https://instagram.fsyq2-1.fna.fbcdn.net/v/t51.2885-15/e35/57487908_819589085073967_1754575486980345083_n.jpg?_nc_ht=instagram.fsyq2-1.fna.fbcdn.net&_nc_cat=107&oh=bd473c38ea78382b5cabd4dff065a4ce&oe=5E81121D" alt="Antonio Martinez">
+                                        <img src="images/me.png" alt="Antonio Martinez">
                                     </div>
                                 </div>
 
@@ -117,11 +117,11 @@
                                         <div class="owl-carousel text-rotation">
 
                                             <div class="item">
-                                                <div class="sp-subtitle">Full Stack</div>
+                                                <div class="sp-subtitle">Full Stack Web Developer</div>
                                             </div>
 
                                             <div class="item">
-                                                <div class="sp-subtitle">Web Developer</div>
+                                                <div class="sp-subtitle">Full Stack Web Developer</div>
                                             </div>
 
                                         </div>
