--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     
                                        <p>
   <video width="300" autoplay controls>
-  <source src="https://martinezantonio.github.io/images/record.mp4" type="video/mp4">
+  <source src="recording.mp4" type="video/mp4">
 </video>
                                              </p>
                                         
