--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                                 <div class="col-sm-4 col-md-4 col-lg-4">
                                     <div class="photo">
-                                        <img src="images/me.png" alt="Antonio Martinez">
+                                        <img src="images/meee.png" alt="Antonio Martinez">
                                     </div>
                                     
                                     
@@ -163,8 +163,8 @@
                                         </div>
 
                                         <p>
-                                            I’m Antonio. Full Stack Web Developer, coding since my 17 years old using javaScript, Php, Mysql, CSS and other front-end frameworks.<br><br>
-                                            I love to develop projects from the beginning and see how they come to life with each line of code. <a href="/#resume">Read more..</a> <br><br>
+                                            I’m Antonio. I started destroying all the appliances in my house to see how they worked inside. Finally I met the programming and now I am in love and happy to be part of this industry so complex but somehow placid, challenging and fun. 
+                                            <a href="/#resume">Read more..</a> <br><br>
                                         </p>
 
                                     </div>
