--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                                     </div>
 
                                     <div class="social-links">
+                                           <a href="http://skype.com/" target="_blank"><i class="fa fa-skype"></i>julitoporta</a>
                                         <a href="https://www.facebook.com/antoniomartzz" target="_blank"><i class="fa fa-facebook"></i></a>
                                         <a href="https://www.instagram.com/antoniomartz/" target="_blank"><i class="fa fa-instagram"></i></a>
                                         <a href="https://github.com/MartinezAntonio" target="_blank"><i class="fa fa-github"></i></a>
