--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                     </div>
 
                                     <div class="social-links">
-                                        <a href="skype:julitoporta?julitoporta" target="_blank"><i class="fa fa-skype"></i></a>
+                                        <a href="skype:antonio_martinez?julitoporta" target="_blank"><i class="fa fa-skype"></i></a>
                                         <a href="https://www.facebook.com/antoniomartzz" target="_blank"><i class="fa fa-facebook"></i></a>
                                         <a href="https://www.instagram.com/antoniomartz/" target="_blank"><i class="fa fa-instagram"></i></a>
                                         <a href="https://github.com/MartinezAntonio" target="_blank"><i class="fa fa-github"></i></a>
