--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
                                     </div>
 
                                     <ul>
+                                        <li>Massive data management, big reports, real-time statistics and big data with data tables (using eg: ag-grid)</li>
                                         <li>Creation of customized complex and unique algorithms and formulas to solve unique needs.</li>
                                         <li>Development of complex systems using routes, MVC architecture and object-oriented programming. (OOP)</li>
                                         <li>Database design and standardization (MySQL).</li>
