--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
                                         <h3>About <span>Me</span></h3>
                                     </div>
 
-                                    <p>Full Stack Web Developer, coding since my 17 years old using javaScript, Php, Mysql, CSS and other front-end frameworks.
+                                    <p>Full Stack Web Developer with excellent debugging skills
+, coding since my 17 years old using javaScript, Php, Mysql, CSS and other front-end frameworks.
                                         I love to develop projects from the beginning and see how they come to life with each line of code.<br>
                                     </p>
 
@@ -325,6 +326,11 @@
                                         </div>
 
                                         <div class="skills-info">
+                                              <h4>Excellent debugging skills</h4>
+                                            <div class="skill-container">
+                                                <div class="skill-percentage skill-1"></div>
+                                            </div>
+                                            
                                             <h4>JavaScript</h4>
                                             <div class="skill-container">
                                                 <div class="skill-percentage skill-1"></div>
