--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
                                         </div>
 
                                         <p>
-                                            I’m Antonio. I started destroying all the appliances in my house to see how they worked inside. Finally I met the programming and now I am in love and happy to be part of this industry so complex but somehow placid, challenging and fun. 
+                                            Full Stack Web Developer with excellent debugging skills.
+Six years of professional experience in love with this industry and happy to being part of this digital transformation.
                                             <a href="/#resume">Read more..</a> <br><br>
                                         </p>
 
