--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                                 <div class="col-sm-4 col-md-4 col-lg-4">
                                     <div class="photo">
-                                        <img src="images/meee.png" alt="Antonio Martinez">
+                                        <img src="images/me.png" alt="Antonio Martinez">
                                     </div>
                                     
                                     
