--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <title>Antonio Martinez - Web Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="author" content="Antonio Martinez" />
-    <link rel="shortcut icon" href="https://cr.linkemer.com/antonio/images/antonio.png?v2">
     <META NAME="ROBOTS" CONTENT="INDEX,FOLLOW">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -209,8 +208,8 @@ Six years of professional experience in love with this industry and happy to bei
                                         <h3>About <span>Me</span></h3>
                                     </div>
 
-                                    <p>Full Stack Web Developer with excellent debugging skills
-, coding since my 17 years old using javaScript, Php, Mysql, CSS and other front-end frameworks.
+                                    <p>Web Developer with excellent debugging skills
+, with 6 years of coding using javaScript, PHP, mySql, CSS and other front-end frameworks.
                                         I love to develop projects from the beginning and see how they come to life with each line of code.<br>
                                     </p>
 
