--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                                         <div class="owl-carousel text-rotation">
 
                                             <div class="item">
-                                                <div class="sp-subtitle">Full Stack Web Developer</div>
+                                                <div class="sp-subtitle">Software Engineer</div>
                                             </div>
 
                                             <div class="item">
-                                                <div class="sp-subtitle">Full Stack Web Developer</div>
+                                                <div class="sp-subtitle">Software Engineer</div>
                                             </div>
 
                                         </div>
