--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                         
                                         
                                         <div class="block-title">
-                                            <h3>Hi!<span></span></h3>
+                                            <h3>Hello!<span></span></h3>
                                         </div>
 
                                         <p>
