--- a/index.html
+++ b/index.html
@@ -163,9 +163,8 @@
                                         </div>
 
                                         <p>
-                                            Full Stack Web Developer with excellent debugging skills.
-Six years of professional experience in love with this industry and happy to being part of this digital transformation.
-                                            <a href="/#resume">Read more..</a> <br><br>
+                                            I am a driven individual with the ability to adapt to any situation and proven potential to grow self and others.
+                                            <a href="/#resume">Go to Resume</a> <br><br>
                                         </p>
 
                                     </div>
