--- a/index.html
+++ b/index.html
@@ -207,17 +207,14 @@
                                         <h3>About <span>Me</span></h3>
                                     </div>
 
-                                    <p>Web Developer with excellent debugging skills
-, with 6 years of coding using javaScript, PHP, mySql, CSS and other front-end frameworks.
-                                        I love to develop projects from the beginning and see how they come to life with each line of code.<br>
-                                    </p>
-
                                     <p>
-                                        I have experience developing small and large web projects, both front-end and back-end. I develop in a structured and object-oriented (OOP), implementing the best architecture practices such as MVC.
-                                        <br><br>
-                                        I have knowledge in database design, structuring and standardization, obtained from the experience in developing complex systems. My experience covers all phases of the project life cycle, from the structuring of the database to the development and the code documentation.
-                                    </p>
+                                    Web developer with 7 years of coding. With excellent debugging skills. My focus technologies are JavaScript, typeScript, Angular CLI, PHP, Rest APIs, MySQL, HTML5 and CSS.
 
+Experience with custom developments from scratch and also with PHP or JavaScripts frameworks, for example, Laravel or Angular, very good working front-end and backend even I have dealt with database design and structuring.
+
+Beyond the professional area, I have also gained a lot of experience from my personal projects. I've tried a lot of crazy things.
+
+                                    </p>
 
                                     <p><b>I always say that, with Stackoverflow and Google you can develop anything!</b></p>
 
