--- a/index.html
+++ b/index.html
@@ -208,10 +208,11 @@
                                     </div>
 
                                     <p>
-                                    Web developer with 7 years of coding. With excellent debugging skills. My focus technologies are JavaScript, typeScript, Angular CLI, PHP, Rest APIs, MySQL, HTML5 and CSS.
-
+                                    Web developer with 7 years of coding. With excellent debugging skills. <br><br>
+                                        My focus technologies are JavaScript, typeScript, Angular CLI, PHP, Rest APIs, MySQL, HTML5 and CSS.
+                                        <br><br>
 Experience with custom developments from scratch and also with PHP or JavaScripts frameworks, for example, Laravel or Angular, very good working front-end and backend even I have dealt with database design and structuring.
-
+<br><br>
 Beyond the professional area, I have also gained a lot of experience from my personal projects. I've tried a lot of crazy things.
 
                                     </p>
