--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
                                         </div>
 
                                         <p>
-                                            I am a driven individual with the ability to adapt to any situation and proven potential to grow self and others.
+                                            Web developer with 7 years of coding. With excellent debugging skills. <br>
+                                        My focus technologies are JavaScript, typeScript, Angular CLI, PHP, Rest APIs, MySQL, HTML5 and CSS.
                                             <a href="/#resume">Go to Resume</a> <br><br>
                                         </p>
 
