--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@ Beyond the professional area, I have also gained a lot of experience from my per
                                             <!-- / Experience 1 -->
 
                                             <!-- Experience 2 -->
-                                          <!--  <div class="timeline-item">
+                                           <div class="timeline-item">
                                                 <h4 class="item-title">CRnetsoft</h4>
                                                 <span class="item-small">Web Agency</span>
                                                 <p class="item-description">Web Developer</p>
-                                            </div> -->
+                                            </div> 
                                             <!-- / Experience 2 -->
 
                                            
