--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ Beyond the professional area, I have also gained a lot of experience from my per
 
 
                                         <div class="download-resume">
-                                            <a href="/web-developer-resume.pdf" target="_blank" download class="btn btn-secondary">Download PDF Resume</a>
+                                            <a href="/resume.pdf" target="_blank" download class="btn btn-secondary">Download PDF Resume</a>
                                         </div>
 
 
