--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                         </div>
 
                                         <p>
-                                            Good person and Web developer with 7 years of coding. <br> With excellent debugging skills. <br>
+                                           Software Engineer Web developer with 7 years of coding. <br> With extensive knowledge solving web problems, very proactive With excellent debugging skills. <br>
                                         My focus technologies are JavaScript, typeScript, Angular CLI, PHP, Rest APIs, MySQL, HTML5 and CSS.
                                             <a href="/#resume">Go to Resume</a> <br><br>
                                         </p>
