--- a/index.html
+++ b/index.html
@@ -208,7 +208,9 @@
                                     </div>
 
                                     <p>
-                                    Good person and Web developer with 7 years of coding. With excellent debugging skills. <br>
+                                        Write code, solve problems for the web, create and more challenge and cool things. I love this. <br>
+                                        
+                                    Web developer with 7 years of coding. With excellent debugging skills. <br>
                                         My focus technologies are JavaScript, typeScript, Angular CLI, PHP, Rest APIs, MySQL, HTML5 and CSS.
                                         <br><br>
 Experience with custom developments from scratch and also with PHP or JavaScripts frameworks, for example, Laravel or Angular, very good working front-end and backend even I have dealt with database design and structuring.
