--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                         </div>
 
                                         <p>
-                                           Software Engineer Web developer with 7 years of coding. <br> With extensive knowledge solving web problems, very proactive With excellent debugging skills. <br>
+                                           7 years coding. <br> With extensive knowledge solving web problems, very proactive with excellent debugging skills. <br>
                                         My focus technologies are JavaScript, typeScript, Angular CLI, PHP, Rest APIs, MySQL, HTML5 and CSS.
                                             <a href="/#resume">Go to Resume</a> <br><br>
                                         </p>
@@ -210,7 +210,7 @@
                                     <p>
                                         Write code, solve problems for the web, create and more challenge and cool things. I love this. <br>
                                         
-                                    Web developer with 7 years of coding. With excellent debugging skills. <br>
+                                    7 years coding. With excellent debugging skills. <br>
                                         My focus technologies are JavaScript, typeScript, Angular CLI, PHP, Rest APIs, MySQL, HTML5 and CSS.
                                         <br><br>
 Experience with custom developments from scratch and also with PHP or JavaScripts frameworks, for example, Laravel or Angular, very good working front-end and backend even I have dealt with database design and structuring.
