--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                         </div>
 
                                         <p>
-                                           7 years coding. <br> With extensive knowledge solving web problems, very proactive with excellent debugging skills. <br>
+                                           7 years coding. <br> very proactive with excellent debugging skills. <br>
                                         My focus technologies are JavaScript, typeScript, Angular CLI, PHP, Rest APIs, MySQL, HTML5 and CSS.
                                             <a href="/#resume">Go to Resume</a> <br><br>
                                         </p>
