--- a/index.html
+++ b/index.html
@@ -207,13 +207,11 @@
                                         <h3>About <span>Me</span></h3>
                                     </div>
 
-                                    <p>
-                                        Write code, solve problems for the web, create and more challenge and cool things. I love this. <br>
-                                        
+                                    <p>                                        
                                     7 years coding. With excellent debugging skills. <br>
                                         My focus technologies are JavaScript, typeScript, Angular CLI, PHP, Rest APIs, MySQL, HTML5 and CSS.
                                         <br><br>
-Experience with custom developments from scratch and also with PHP or JavaScripts frameworks, for example, Laravel or Angular, very good working front-end and backend even I have dealt with database design and structuring.
+Experience with custom developments from scratch and also with PHP or JavaScripts frameworks, for example, Laravel or Angular, very good working front-end and backend even with database design and structuring.
 <br><br>
 Beyond the professional area, I have also gained a lot of experience from my personal projects. I've tried a lot of crazy things.
 
