--- a/index.html
+++ b/index.html
@@ -225,23 +225,23 @@ Beyond the professional area, I have also gained a lot of experience from my per
                                     </div>
 
                                     <ul>
-                                        <li>Massive data management, big reports, real-time statistics and big data with data tables (using eg: ag-grid)</li>
+                                        <li>Massive data management, large reports, real-time statistics and big data with data tables (using eg: ag-grid)</li>
                                         <li>Creation of customized complex and unique algorithms and formulas to solve unique needs.</li>
-                                        <li>Development of complex systems using routes, MVC architecture and object-oriented programming. (OOP)</li>
+                                        <li>Development of complex systems, MVC architecture and object-oriented programming. (OOP)</li>
                                         <li>Database design and standardization (MySQL).</li>
-                                        <li>Queries, Stored Procedures and functions in Mysql.</li>
+                                        <li>Queries, Stored Procedures, triggers and functions in Mysql.</li>
                                         <li>Implementation of Braintree, Greenpay, PayPal and Stripe APIs (Payment gateways).</li>
-                                        <li>Login with SDK API of Facebook and Google (PHP).</li>
-                                        <li>Consuming and developing PHP API Rest from scratch and SOAP (nusoap PHP Lib).</li>
-                                        <li>Creation of front-end interfaces in Angular 8 with typeScript.</li>
-                                        <li>Complex management systems with Async PHP and dynamic Data responses using AJAX and JSON for Callbacks.</li>
-                                        <li>Custom PHP Plugins, Widgets and Themes for Wordpress.</li>
+                                        <li>External Login APIs, facebook SDK, Google.</li>
+                                        <li>Consuming or developing APIs from scratch. Rest and SOAP types.</li>
+                                        <li>Creation of front-end interfaces with HTML5, CSS, js or Angular CLI.</li>
+                                        <li>Understanding of async data with PHP, ajax and others.</li>
+                                        <li>Experience developing custom Wordpress plugins, Widgets and Themes.</li>
                                         <li>System maintenance and debugging. (PHP, JavaScript, MySQL).</li>
-                                        <li>Dynamic Responsive websites and Web applications, using CSS, jQuery, Angular, Bootstrap and ohers.</li>
+                                        <li>Dynamic Responsive websites and Web applications, using CSS, jQuery, Angular, Bootstrap and others.</li>
                                         <li>Websites and Web applications Optimization. (Improving the code, minifying, data compressing, etc).</li>
                                         <li>Scraping with JavaScript.</li>
                                         <li>Server management and ability to create a development environment for any lamp project.</li>
-                                        <li>Strong understanding of web master concepts (SSL, IIS, DNS and IP configuration).</li>
+                                        <li>Understanding of web master concepts (SSL, IIS, DNS and IP configuration, Cloudflare).</li>
                                     </ul>
 
 
