--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                                         </div>
 
                                         <p>
-                                           7 years coding. <br> very proactive with excellent debugging skills. <br>
-                                        My focus technologies are JavaScript, typeScript, Angular CLI, PHP, Rest APIs, MySQL, HTML5 and CSS.
+                                           7 years coding. <br> Very proactive with excellent debugging skills. <br>
+                                        My focus technologies are JavaScript, Angular CLI, PHP (mvc), Rest APIs, MySQL, HTML5, CSS and some other tools.
                                             <a href="/#resume">Go to Resume</a> <br><br>
                                         </p>
 
