--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
                                         <br><br>
 Experience with custom developments from scratch and also with PHP or JavaScripts frameworks, for example, Laravel or Angular, very good working front-end and backend even with database design and structuring.
 <br><br>
-Beyond the professional area, I have also gained a lot of experience from my personal projects. I've tried a lot of crazy things.
+Beyond the professional area, I have also gained a lot of experience from my personal projects. I have been trying a lot of crazy things and personal projects with large code lines and many hours of work.
+                                      
 
                                     </p>
 
