--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ Beyond the professional area, I have also gained a lot of experience from my per
                                                 <div class="skill-percentage skill-1"></div>
                                             </div>
 
-                                            <h4>Angular/TypeScript</h4>
+                                            <h4>Angular CLI</h4>
                                             <div class="skill-container">
                                                 <div class="skill-percentage skill-2"></div>
                                             </div>
@@ -351,16 +351,12 @@ Beyond the professional area, I have also gained a lot of experience from my per
                                                 <div class="skill-percentage skill-2"></div>
                                             </div>
 
-                                            <h4>Bootstrap</h4>
+                                            <h4>Bootstrap / Material Design</h4>
                                             <div class="skill-container">
                                                 <div class="skill-percentage skill-2"></div>
                                             </div>
 
-                                            <h4>Material Design</h4>
-                                            <div class="skill-container">
-                                                <div class="skill-percentage skill-3"></div>
-                                            </div>
-
+                                        
                                         </div>
 
                                     </div>
